// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render gutter 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render label 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render maxWidth 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render placement 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render visible 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without animation 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without content 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without modal 1`] = `
<button
  aria-busy="false"
  aria-controls="popover"
  aria-expanded="true"
  aria-haspopup="dialog"
  class="wp-components-button css-15tf5go"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item wp-components-flex-block css-13400lq"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show Yourself
    </span>
  </span>
  <span
    class="wp-components-elevation css-h443as"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render without trigger 1`] = `null`;
